fixed page overflow

--- a/src/styles/Carousel/slick-theme.scss
+++ b/src/styles/Carousel/slick-theme.scss
@@ -26,7 +26,7 @@
 }
 
 .slick-prev {
-    left: -13px;
+    left: -7px;
     display: none;
 }
 
