--- a/src/styles/Carousel/slick.scss
+++ b/src/styles/Carousel/slick.scss
@@ -15,12 +15,6 @@
     -webkit-tap-highlight-color: transparent;
 }
 
-@media only screen and (max-width: 1550px) {
-    .slick-slider {
-
-    }
-}
-
 .slick-list {
     position: relative;
     overflow: hidden;
